3_policies/resource/egress-www-db.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: egress-www-db
spec:
  podSelector:
    matchLabels:
      tier: webserver
  egress:
  - to:
    - podSelector:
        matchLabels:
          tier: database
    ports:
    - port: 5432
